fix width on mobile

--- a/src/ui/components/footer/footer.scss
+++ b/src/ui/components/footer/footer.scss
@@ -17,7 +17,6 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  max-width: 100vw;
   min-height: 70px;
   display: flex;
   padding: 1em;
